--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
       "email": "sindresorhus@gmail.com"
     }
   ],
-  "name": "rev-path",
+  "name": "swg-rev-path",
   "optionalDependencies": {},
   "publish_time": 1432328204173,
   "readme": "ERROR: No README data found!",
